minor bug fix -text overflow tweet box

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -27,6 +27,10 @@ box-shadow: 6px 6px 3px gray;
   align-items: center;
 }
 
+.tweet header > p {
+  word-break: break-all;
+}
+
 .avatar {
   display: flex;
   flex-direction: row;
